--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.javax.json-1.0.jar-1=C:\\Users\\hppc\\Documents\\javax.json-1.0.j
 file.reference.mysql-connector.jar=E:\\mysql-connector.jar
 file.reference.mysql-connector.jar-1=D:\\Software 1\\java\\mysql-connector.jar
 file.reference.okhttp-3.4.1.jar=E:\\okhttp-3.4.1.jar
+file.reference.rs2xml.jar=C:\\Users\\hppc\\Downloads\\rs2xml.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -46,7 +47,8 @@ javac.classpath=\
     ${file.reference.mysql-connector.jar}:\
     ${file.reference.okhttp-3.4.1.jar}:\
     ${file.reference.mysql-connector.jar-1}:\
-    ${file.reference.javax.json-1.0.jar-1}
+    ${file.reference.javax.json-1.0.jar-1}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
