--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,10 @@ dist.jar=${dist.dir}/eracordDesktop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.imagej-1.40.jar=C:\\Users\\hppc\\Downloads\\imagej-1.40.jar
 file.reference.javax.json-1.0.jar=C:\\Users\\lenovo\\Downloads\\javax.json-1.0.jar
 file.reference.javax.json-1.0.jar-1=C:\\Users\\hppc\\Documents\\javax.json-1.0.jar
+file.reference.jmf-2.1.1e.jar=C:\\Users\\hppc\\Downloads\\jmf-2.1.1e.jar
 file.reference.mysql-connector.jar=E:\\mysql-connector.jar
 file.reference.mysql-connector.jar-1=D:\\Software 1\\java\\mysql-connector.jar
 file.reference.okhttp-3.4.1.jar=E:\\okhttp-3.4.1.jar
@@ -48,7 +50,9 @@ javac.classpath=\
     ${file.reference.okhttp-3.4.1.jar}:\
     ${file.reference.mysql-connector.jar-1}:\
     ${file.reference.javax.json-1.0.jar-1}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.jmf-2.1.1e.jar}:\
+    ${file.reference.imagej-1.40.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
